<resources>
    <string name="app_name">A simple Calculator</string>
    <string name="number0">0</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="toPercent">%</string>
    <string name="buttonC">C</string>
    <string name="dot">.</string>
    <string name="div">/</string>
    <string name="plus">+</string>
    <string name="multi">X</string>
    <string name="minus">-</string>
    <string name="changeSign">/-</string>
    <string name="equal">=</string>
</resources>